[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymouser"
version = "0.8"
authors = [
  { name="Alex Sartori", email="alex.sartori1997@gmail.com" },
]
description = "Module to interact with Mouser's Search API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AlexSartori/pymouser"
